[package]
name = "sign"
version = "0.1.0"
authors = ["easechen <956902354@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "cookie_store"]}
json = "0.12.4"